Fixed main content overflow on Iphone

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,6 +4,7 @@ body{
 }
 .main-Content{
     margin-top: 70px;
+    overflow-x: hidden;
 }
 div, li, a, p {
     font-family: Arial, Helvetica, sans-serif;
